--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@uiw/react-textarea-code-editor": "^3.1.0",
     "mafs": "^0.21.0",
-    "next": "15.1.1",
+    "next": "^15.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-latex-next": "^3.0.0"
